# historian_connector

./: Makefile  README.md
docker/: .env  docker-compose.yaml
ngn-follower/: Dockerfile  README.md  setup.cfg
ngn-follower/src/ngn/follower/: constants.py  main.py  sap_hana_writer.py  sensor_follower.py
ngn-follower/tests/: test_description_parser.py
