[metadata]
name = ngn-follower
description = NGN Follower
python_requires = >=3.8

[options]
packages = find:
install_requires =
    confluent-kafka~=2.4
    requests~=2.32
    hdbcli~=2.18
    pytz==2023.3.post1

[options.extras_require]
test =
    pytest
    pytest-cov

[tool:pytest]
pythonpath = ../src

[options.packages.find]
where = src